--- a/style.css
+++ b/style.css
@@ -19,31 +19,24 @@
 
 body {
     display: grid;
-    min-height: 100vh;
+    place-items: center;
+    height: 100vh;
     background-color: var(--Grayish-Blue);
     font-family: var(--Main-font);
 }
 
 
 main {
-    grid-template-columns: auto 1fr auto;
+    grid-template-rows: 1fr 1fr auto;
     max-width: 600px;
     background-color: var(--Light-Grayish-Blue);
     border-radius: 12px;
     overflow: hidden;
-}
-/* 
-main {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    width: 700px;
-    background-color: var(--Light-Grayish-Blue);
-    margin: 0 auto;
-    padding: 27px;
-}
- */
-
-.main-img {
-    width:
+    
 }
 
+
+img {
+    width: 100%;
+    height: 314px;
+}
